# claw-code

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.claude/artifacts/: web_integration_plan.md
assets/skills/: .antigravity-install-manifest.json
assets/skills/nmpa-docx-polish/: SKILL.md
assets/skills/nmpa-docx-polish/references/: nmpa_style.md
docs/: deployment.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/chat/: ChatInputBox.tsx  PlanStepsCard.tsx  ThinkingBlock.tsx  ToolRenderer.tsx  WorkspaceFiles.tsx
frontend/src/hooks/: useAuth.ts  useChatStream.ts  useSessions.ts  useWorkspace.ts
frontend/src/styles/: tokens.ts
frontend/src/utils/: messageParser.ts  sessionHydration.test.ts  sessionHydration.ts
rust/: .env  PRODUCTION_ENV.md  claw_agent.db  mock.err  mock_server.py  state.json  test_agent_web.py  test_mock_sdk.py  test_sandbox.py  test_sdk_local.py
rust/crates/api-server/: Cargo.toml
rust/crates/api-server/src/: agent_routes.rs  auth.rs  chat.rs  db.rs  main.rs  runtime_bridge.rs  sandbox_client.rs  sandbox_routes.rs  skills.rs  state.rs  workspace.rs
rust/crates/api/src/: lib.rs
rust/crates/api/src/providers/: mod.rs  (+1 more)
rust/crates/commands/src/: lib.rs
rust/crates/runtime/src/: bash.rs  compact.rs  conversation.rs  lib.rs  mcp_stdio.rs  mcp_tool_bridge.rs  sandbox.rs
rust/crates/rusty-claude-cli/tests/: mock_parity_harness.rs
rust/crates/tools/src/: lib.rs
scripts/: deploy.sh  init_users.ps1  init_users.sh
(+2 files in other folders)
